--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -38,7 +38,7 @@
 <view class="all">
 <view wx:if="{{order.order_type==1}}">
     <view class="address">
-        <image src="http://teahouse.siring.cn/u6095.png" mode="widthFix"  class="address_ico"/>
+        <image src="http://teahouse.siring.cn/u250.png" mode="widthFix"  class="address_ico"/>
         <view class="address_content">
             <view class="name_phone">
                 <text class="name">{{order.name}} </text>
@@ -63,7 +63,7 @@
 </view>
 <view wx:elif="{{order.order_type==2}}">
     <view class="address">
-        <image src="http://teahouse.siring.cn/u6095.png" mode="widthFix"  class="address_ico"/>
+        <image src="http://teahouse.siring.cn/u250.png" mode="widthFix"  class="address_ico"/>
         <view class="address_content">
             <view class="lift">
                 <text>自提点：</text>     
@@ -91,7 +91,7 @@
 </view>
 <view wx:elif="{{order.order_type==3}}">
     <view class="address">
-        <image src="http://teahouse.siring.cn/u6095.png" mode="widthFix"  class="address_ico"/>
+        <image src="http://teahouse.siring.cn/u250.png" mode="widthFix"  class="address_ico"/>
         <view class="address_content">
             <view class="lift">
                 <text>仓储点： </text>
@@ -213,12 +213,12 @@
                         <view class='num'>x{{item.order_quantity}}</view>
                     </view>
                 </view>
-                <view class='box_list_four'>
+                <!-- <view class='box_list_four'>
                     <view>
                         <view class='cancel type_button'  bindtap="go_apply_after_sales" data-id="{{item.id}}">售后</view>
                         <view class='payment'  bindtap="go_evaluation" data-id="{{item.id}}">追加评价</view>
                     </view>
-                </view>
+                </view> -->
             </view>
           
            
