--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,4 +1,76 @@
 /* pages/order/order.wxss */
+
+/* 支付start */
+.pm-content{
+  position: absolute;
+  left: 50%;
+  bottom: 10px;
+  width: 86%;
+  transform: translateX(-50%);
+}
+.pm-content .pm-account,
+.pm-content .pm-wxpay{
+  width: 100%;
+  background-color: #fff;
+}
+.pm-content .pm-account{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.pm-content .pm-wxpay{
+  border-top: 1px solid #dedede;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.pm-content .pm-inner-view{
+  position: relative;
+  min-height: 60px;
+}
+.pm-content .pm-inner-view .pm-o{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 60px;
+}
+.pm-content .pm-inner-view .pm-o{
+  font-size: 18px;
+  color: #0099ff;
+}
+.pm-content .pm-inner-view .pm-o .pm-y{
+  font-size: 12px;
+  color: #868686;
+}
+.pm-content image{
+  position: absolute;
+  left: 50px;
+  top: 50%;
+  margin-top: -15px;
+  width: 30px;
+  height: 30px;
+  margin-right: 30px;
+}
+.pm-content .cancel{
+  background-color: #fff;
+  font-size: 16px;
+  color: #0099ff;
+  text-align: center;
+  min-height: 40px;
+  line-height: 40px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+.mask{
+  position: absolute;
+  top: 0;
+  left: 0; 
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, .5);
+}
+/* 支付end */
+
 /* 顶部导航 */
 .nav{
   display: flex;
