--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -335,7 +335,7 @@
       <image src="http://teahouse.siring.cn/u1272.png"></image>
       <view class="pm-o">
         <view>账户支付</view>
-        <text class="pm-y">(余额：￥0.00)</text>
+        <text class="pm-y">(余额：￥{{balance}})</text>
       </view>
     </view>
   </view>
