--- a/pages/members/members.wxml
+++ b/pages/members/members.wxml
@@ -76,12 +76,10 @@
     </view>
   </view>
   <view class="num_button">
-    <view>
+    <view class="tik">
       <text>充值</text>
-      <text style='color: red; font-size:40rpx;padding-right:10rpx;font-size:35rpx;'>
-        ￥{{member_send*10000}}
-      </text>
-      <text>送积分</text>
+      <text style='color: red;font-size:35rpx;line-height:37rpx;'>￥{{member_send*10000}}</text>
+      <text style="padding-left:20rpx;">送积分</text>
       <text style='color:red'>{{integral_send}}</text>
     </view>
     <view class='naext' bindtap="pay">下一步</view>
