--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -177,8 +177,8 @@
         </view>
         <view class='box_list_four'>
           <view>
-            <view class='cancel type_button' bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">售后</view>
-            <view class='payment' bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">追加评价</view>
+            <view class='cancel type_button' bindtap="go_apply_after_sales" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">售后</view>
+            <view class='payment' bindtap="go_evaluation" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">追加评价</view>
           </view>
         </view>
       </view>
