--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -13,13 +13,13 @@
       <view class='order_list_content'>
         <checkbox value="{{item.id}}" checked="{{item.checked}}" />
         <view class="coupon_box">
-          <image class="coupon_box_img" src="http://zhihuichacang.com/u11123.png" mode="widthFix"></image>
+          <image class="coupon_box_img" src="http://zhihuichacang.com/u129.png" mode="widthFix"></image>
           <view class="coupon_money_box">
-            <view>
+            <view class="color-red">
               <text class="money">{{item.money}}</text>
               <text class="money_unit">元</text>
             </view>
-            <view class="limit">满{{item.use_price}}使用</view>
+            <view class="limit color-red">满{{item.use_price}}使用</view>
           </view>
           <view class="coupon_info_box">
             <view class="coupon_name">{{item.label}}</view>
