--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -291,7 +291,12 @@
 .unit-price-p {
   font-size: 34rpx;
 }
+.coupon_name,
+ .validity,
+ .range {
+  color: rgb(153, 0, 0);
 
+ }
 .quantity-p {
   font-size: 28rpx;
   margin-left: 75rpx;
@@ -727,9 +732,12 @@ radio .wx-radio-input.wx-radio-input-checked::before {
   display: flex;
   flex-direction: column;
   width: 400rpx;
+  color: red;
   z-index: 9999999999;
 }
-
+.color-red {
+  color: red;
+}
 .money {
   font-size: 50rpx;
   font-weight: bold;
@@ -745,18 +753,21 @@ radio .wx-radio-input.wx-radio-input-checked::before {
 }
 
 .coupon_name {
-  font-size: 26rpx;
+  font-size: 35rpx;
   line-height: 50rpx;
+  font-weight: 700;
 }
-
+.coupon_name,.validity, .range {
+  color:rgb(153, 0, 0);
+}
 .validity, .range, .go_use {
   font-size: 20rpx;
-  color: #949494;
   line-height: 40rpx;
 }
 
 .go_use {
   text-align: right;
+  margin-right: 10rpx;
 }
 
 .range {
