--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -44,16 +44,14 @@
                 <text class="name">{{order.name}} </text>
                 <text class="phone">{{order.phone_num}}</text>
             </view>
-            <view class="address_detail">
-                地址：{{order.data[0].harvester_address}}     
-            </view>
+            <view class="address_detail">地址：{{order.data[0].harvester_address}}</view>
         </view>
     </view>
     <view class="other_infor">
         <view class="time">
             <view class="time_title">订单时间</view>
-            <view class="create_time"> 创建时间：{{order.create_time}}</view>
-            <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
+            <view class="create_time">创建时间：{{order.create_time}}</view>
+            <view class="repay_time">付款时间：{{order.pay_time}}</view>
         </view>
         <view class="left">
                 <image class="zy_ico" src="http://zhihuichacang.com/u8165.png" mode="widthFix"></image>
@@ -72,16 +70,14 @@
                 <text class="name">{{order.name}} </text>
                 <text class="phone">{{order.data[0].harvest_phone_num}}</text>
             </view>
-            <view class="address_detail">
-                地址：{{order.data[0].harvester_address}}     
-            </view>
+            <view class="address_detail">地址：{{order.data[0].harvester_address}}</view>
         </view>
     </view>
     <view class="other_infor">
         <view class="time">
             <view class="time_title">订单时间</view>
-            <view class="create_time"> 创建时间：{{order.create_time}}</view>
-            <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
+            <view class="create_time">创建时间：{{order.create_time}}</view>
+            <view class="repay_time">付款时间：{{order.pay_time}}</view>
         </view>
         <view class="left">
                 <image class="zy_ico" src="http://zhihuichacang.com/u8483.png" mode="widthFix"></image>
@@ -94,18 +90,16 @@
         <image src="http://zhihuichacang.com/u250.png" mode="widthFix"  class="address_ico"/>
         <view class="address_content">
             <view class="lift">
-                <text>仓储点： </text>
+                <text>仓储点：</text>
             </view>
-            <view class="address_detail">
-                仓储地址：{{order.data[0].harvester_address}}     
-            </view>
+            <view class="address_detail">仓储地址：{{order.data[0].harvester_address}}</view>
         </view>
     </view>
     <view class="other_infor">
         <view class="time">
             <view class="time_title">订单时间</view>
-            <view class="create_time"> 创建时间：{{order.create_time}}</view>
-            <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
+            <view class="create_time">创建时间：{{order.create_time}}</view>
+            <view class="repay_time">付款时间：{{order.pay_time}}</view>
         </view>
         <view class="left">
                 <image class="zy_ico" src="http://zhihuichacang.com/u7044.png" mode="widthFix"></image>
