--- a/pages/coupon/coupon.wxss
+++ b/pages/coupon/coupon.wxss
@@ -49,7 +49,7 @@
    align-items: center;
    justify-content: center;
    flex-direction: column;
-   color: red;
+   color: #fff;
    z-index: 9999999999;
  }
  .coupon_info_box{
@@ -90,7 +90,6 @@
  }
  .go_use{
    text-align: right;
-   margin-right: 10rpx;
  }
  .color-red {
    color: red;
