--- a/component/payment/payment.wxss
+++ b/component/payment/payment.wxss
@@ -5,6 +5,7 @@
   bottom: 10px;
   width: 86%;
   transform: translateX(-50%);
+  z-index: 999;
 }
 .pm-content .pm-account,
 .pm-content .pm-wxpay{
