--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -7,6 +7,7 @@
   bottom: 10px;
   width: 86%;
   transform: translateX(-50%);
+  z-index: 999;
 }
 .pm-content .pm-account,
 .pm-content .pm-wxpay{
