--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -302,7 +302,7 @@
         <text style='color:#FF7E4A;'>{{all_money}}元</text>
       </view>
     </view>
-    <view class='sundry-li'>
+    <!-- <view class='sundry-li'>
       <view class='text_red'>优惠券</view>
       <view wx:if="{{coupon_show==1}}" bindtap="go_coupon">
         <text style='color:#FF7E4A;'>{{coupon_deductible}}</text>
@@ -310,7 +310,7 @@
       <view wx:else>
         <text style='color:#FF7E4A;'>无可适用优惠券</text>
       </view>
-    </view>
+    </view> -->
     <view class="sundry-li {{selected?'show':'hidden'}}">
       <view>运费</view>
       <view>
