--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -87,7 +87,7 @@
     </view>
     <view class='price_cont'>
       <view style="display:flex; align-items:flex-end;margin-bottom:-15px">
-        <view class='level_images' style='margin-bottom:9.5rpx;'>
+        <view class='level_images'>
           <image src='{{member_grade_img}}'></image>
         </view>
         <view wx:if="{{goods.goods_standard==0}}">
